@@ -48,6 +48,9 @@ CommandResult
 handle_rescan(Client &client, Request request, Response &response);
 
 CommandResult
+handle_getvol(Client &client, Request request, Response &response);
+
+CommandResult
 handle_setvol(Client &client, Request request, Response &response);
 
 CommandResult
