@@ -1,4 +1,6 @@
 ver 0.23 (not yet released)
+* protocol
+  - new command "getvol"
 
 ver 0.22.1 (not yet released)
 * output
